--- a/Arconoid + bonus CPP/Arconoid + bonus CPP.vcxproj.filters
+++ b/Arconoid + bonus CPP/Arconoid + bonus CPP.vcxproj.filters
@@ -7,10 +7,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ball.cpp">
+    <ClCompile Include="ballClass.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="Bloks.cpp">
+    <ClCompile Include="blokClass.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
     <ClCompile Include="Header.cpp">
@@ -19,45 +19,45 @@
     <ClCompile Include="Main.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="Racket.cpp">
+    <ClCompile Include="racketClass.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="Fire_Ball.cpp">
+    <ClCompile Include="bonusClass.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="Bonus.cpp">
+    <ClCompile Include="BallClone.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="Little_Big_Racket.cpp">
+    <ClCompile Include="physClass.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="New_HP.cpp">
+    <ClCompile Include="windowClass.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Ball.h">
+    <ClInclude Include="ballClass.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
-    <ClInclude Include="Bloks.h">
+    <ClInclude Include="blokClass.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
     <ClInclude Include="Header.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
-    <ClInclude Include="Racket.h">
+    <ClInclude Include="racketClass.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
-    <ClInclude Include="Fire_Ball.h">
+    <ClInclude Include="bonusClass.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
-    <ClInclude Include="Bonus.h">
+    <ClInclude Include="BallClone.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
-    <ClInclude Include="Little_Big_Racket.h">
+    <ClInclude Include="physClass.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
-    <ClInclude Include="New_HP.h">
+    <ClInclude Include="windowClass.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
   </ItemGroup>
