--- a/Arconoid + bonus CPP/Arconoid + bonus CPP.vcxproj
+++ b/Arconoid + bonus CPP/Arconoid + bonus CPP.vcxproj
@@ -22,9 +22,10 @@
     <ClCompile Include="ballClass.cpp" />
     <ClCompile Include="blokClass.cpp" />
     <ClCompile Include="bonusClass.cpp" />
-    <ClCompile Include="colorStruct.cpp" />
+    <ClCompile Include="colorMapStruct.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="menuClass.cpp" />
     <ClCompile Include="physObjectClass.cpp" />
     <ClCompile Include="racketClass.cpp" />
     <ClCompile Include="vectorStruct.cpp" />
@@ -34,8 +35,9 @@
     <ClInclude Include="ballClass.h" />
     <ClInclude Include="blokClass.h" />
     <ClInclude Include="bonusClass.h" />
-    <ClInclude Include="colorStruct.h" />
+    <ClInclude Include="colorMapStruct.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="menuClass.h" />
     <ClInclude Include="physObjectClass.h" />
     <ClInclude Include="racketClass.h" />
     <ClInclude Include="vectorStruct.h" />
